--- a/KNR-Server/src/main/resources/application.properties
+++ b/KNR-Server/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url =jdbc:sqlserver://localhost;databaseName=KNR
 spring.datasource.username=Rakesh
 spring.datasource.password=R@kesh12
-spring.mvc.dispatch-options-request=true
+#spring.mvc.dispatch-options-request=true
